[gd_scene load_steps=20 format=2]

[ext_resource path="res://resoure/node/1node/1node.tres" type="Texture" id=1]
[ext_resource path="res://resoure/node/0node/0node.tres" type="Texture" id=2]
[ext_resource path="res://node/01node/node.gd" type="Script" id=3]
[ext_resource path="res://node/01node/floaty_64.png" type="Texture" id=4]
[ext_resource path="res://resoure/num/num1.png" type="Texture" id=5]
[ext_resource path="res://resoure/num/num4.png" type="Texture" id=6]
[ext_resource path="res://resoure/num/num5.png" type="Texture" id=7]
[ext_resource path="res://resoure/num/num2.png" type="Texture" id=8]
[ext_resource path="res://resoure/num/num3.png" type="Texture" id=9]
[ext_resource path="res://resoure/UI/A_E/a_e3.png" type="Texture" id=10]
[ext_resource path="res://resoure/UI/A_E/a_e5.png" type="Texture" id=11]
[ext_resource path="res://resoure/UI/A_E/a_e2.png" type="Texture" id=12]
[ext_resource path="res://resoure/UI/A_E/a_e1.png" type="Texture" id=13]
[ext_resource path="res://resoure/UI/A_E/a_e4.png" type="Texture" id=14]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
initial_velocity = 128.71
angular_velocity = 163.96
orbit_velocity = 1.0
orbit_velocity_random = 0.15
linear_accel = -3.96
radial_accel = -81.19
tangential_accel = -1.98
angle = -71.3
angle_random = 1.0

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="node" type="Node2D"]
script = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 2 )
position = Vector2( 31, 33 )
rotation = 3.04036
process_material = SubResource( 3 )
texture = ExtResource( 4 )

[node name="0node" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="1node" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0, 0, 0, 0.627451 )
position = Vector2( 32, 32 )
scale = Vector2( 0.75, 0.796875 )
frames = SubResource( 4 )
frame = 2

[node name="A_E" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 32, 32 )
frames = SubResource( 5 )
frame = 2

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
